--- a/scr/cgo3read_main.lfm
+++ b/scr/cgo3read_main.lfm
@@ -8,7 +8,7 @@ object Form1: TForm1
   ClientWidth = 990
   Constraints.MinHeight = 670
   Constraints.MinWidth = 985
-  SessionProperties = 'cbPort.Text;cbRecord.Checked;cbSpeed.Text;cbTelemetry.Checked;Height;knPanControl.Position;Left;pcMain.ActivePage;rgPanMode.ItemIndex;rgTiltMode.ItemIndex;rgYGC_Type.ItemIndex;Top;Width;WindowState;GIMBALtext.Font'
+  SessionProperties = 'cbPort.Text;cbRecord.Checked;cbSpeed.Text;GIMBALtext.Font;Height;knPanControl.Position;Left;pcMain.ActivePage;rgPanMode.ItemIndex;rgTiltMode.ItemIndex;rgYGC_Type.ItemIndex;Top;Width;WindowState'
   ShowHint = True
   LCLVersion = '4.0.0.3'
   OnActivate = FormActivate
@@ -665,11 +665,11 @@ object Form1: TForm1
     Height = 556
     Top = 96
     Width = 846
-    ActivePage = tsYGC
+    ActivePage = tsFC
     Align = alClient
     Images = ImageList1
     ParentFont = False
-    TabIndex = 0
+    TabIndex = 1
     TabOrder = 2
     OnChange = pcMainChange
     object tsYGC: TTabSheet
